<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ProgramsArray">

    <View
        android:id="@+id/topBackground"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:background="@drawable/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="36dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@mipmap/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@android:color/black" />

    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:text="@string/array_example"
        android:textAppearance="@style/some_id"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/topBackground"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="@+id/topBackground" />

    <TextView
        android:id="@+id/codeSnippet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@android:color/darker_gray"
        android:padding="10dp"
        android:text="@string/code_snippet"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBackground" />

    <EditText
        android:id="@+id/answer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_the_first_missing_value"
        android:background="@android:color/white"
        android:padding="8dp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/codeSnippet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/answer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_the_second_missing_value"
        android:background="@android:color/white"
        android:padding="8dp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/answer1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/answer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_the_third_missing_value"
        android:background="@android:color/white"
        android:padding="8dp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/answer2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/checkButton"
        android:layout_width="301dp"
        android:layout_height="55dp"
        android:background="@drawable/button_border_black"
        android:padding="12dp"
        android:text="@string/check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/answer3" />

</androidx.constraintlayout.widget.ConstraintLayout>
