<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ProgramsArray">

    <View
        android:id="@+id/topBackground"
        android:layout_width="411dp"
        android:layout_height="95dp"
        android:background="@drawable/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="36dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@mipmap/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@android:color/black" />

    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:text="@string/array"
        android:textAppearance="@style/some_id"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/topBackground"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="@+id/topBackground"
        app:layout_constraintVertical_bias="0.519"
        tools:ignore="MissingConstraints" />


    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="782dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBackground"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ArrayExample"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-2dp"
            android:background="@drawable/button_border_square_black"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:gravity="left"
            android:padding="12dp"
            android:text="@string/array_example"
            android:textColor="@color/black"
            android:clickable="true"
            android:focusable="true"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-2dp"
            android:background="@drawable/button_border_square_black"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:gravity="left"
            android:padding="12dp"
            android:text="@string/add_two_matrix_using_list_comprehensions"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-2dp"
            android:background="@drawable/button_border_square_black"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:gravity="left"
            android:padding="12dp"
            android:text="@string/add_two_matrix"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-2dp"
            android:background="@drawable/button_border_square_black"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:gravity="left"
            android:padding="12dp"
            android:text="@string/find_closest_value_of_a_number_in_an_array"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-2dp"
            android:background="@drawable/button_border_square_black"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:gravity="left"
            android:padding="12dp"
            android:text="@string/matrix_multiplication"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-2dp"
            android:background="@drawable/button_border_square_black"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:gravity="left"
            android:padding="12dp"
            android:text="@string/matrix_subtraction"
            android:textColor="@color/black" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>